# chalk

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
config/: config.example.py  default.py  default.toml
config/drupal_selection_menu_map/: event_audience_values.toml  event_topic_values.toml  registration_method_values.toml
config/email_templates/post_class/: post_class.html  post_class.txt
config/email_templates/pre_class/: pre_class.html  variables.json
config/schedule/: 2025_03.example.csv  active_classes.example.csv
db/: chalk_schedule.init.sqlite
reference/: drupal_post_event_curl_2_python.py
reference/database/: create_tables.sql  insert_default_values.sql
reference/drupal_selection_menu_map/: event_type_values.toml  nypl_location_values.toml  online_resources_values.toml  person_type_values.toml  series_values.toml
scripts/: setup
src/: main.py  schedule_zoom_meeting.py
src/chalk/: cli.py  main.py  post_drupal_event.py  schedule_zoom_meeting.py  test_functions.py
src/chalk/chalk_utils/: db_utils.py  env_vars.py  logging.py  sys_utils.py
src/chalk/classes/: auth.py  drupal.py  fetch.py  models.py  utils.py
src/chalk/google_api/: apps.py  auth.py
src/chalk/zoom/: scheduler.py
src/config/: config-example.py
src/config/email_templates/example_template/: example_template.html  example_template.txt  variables.json
src/config/email_templates/post_class/: post_class.html  variables.json
src/config/email_templates/pre_class/: pre_class.html  pre_class.txt
src/email/: templates.py
src/zoom/: scheduler.py
